<resources>
    <string name = "app_name">MyPet</string>
    <string name = "pet_title">Your Pet\'s Status</string>
    <string name = "pet_name">Pet Name</string>
    <string name = "pet_state">Your pet is:</string>
    <string name = "pet_happy">Happy</string>
    <string name = "pet_type">You have a:</string>
    <string name = "title_activity_select_pet">SelectPet</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="select_pet">Select Your Pet</string>
    <string name="cat">Cat</string>
    <string name="dog">Dog</string>
    <string name="hamster">Hamster</string>
    <string name="feed">Feed</string>
    <string name="play">PLAY</string>
    <string name="sleep">Sleep</string>
    <string name="petimage">PetImage</string>
    <string name="your_pet_name">Your Pet Name</string>
    <string name="save">Save</string>
    <string name="add_pet">Add a new Pet</string>
</resources>
