<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectPet">

    <TextView
        android:id="@+id/textView"
        android:layout_width="203dp"
        android:layout_height="41dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="123dp"
        android:layout_marginBottom="40dp"
        android:text="@string/select_pet"
        android:textAlignment="center"
        android:textColor="#FF5722"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ImageButtonCat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/petName"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="123dp"
        android:hint="@string/your_pet_name"
        android:textAlignment="center"
        android:textColor="#FF5722"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ImageButtonCat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        android:autofillHints=""/>

    <ImageButton
        android:id="@+id/ImageButtonCat"
        android:layout_width="127dp"
        android:layout_height="130dp"
        android:layout_marginStart="142dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="142dp"
        android:layout_marginBottom="425dp"
        android:contentDescription="@string/cat"
        android:src="@drawable/cat_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/ImageButtonDog"
        android:layout_width="127dp"
        android:layout_height="130dp"
        android:layout_marginStart="142dp"
        android:layout_marginEnd="142dp"
        android:contentDescription="@string/dog"
        android:src="@drawable/dog_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImageButtonCat"
        app:layout_constraintVertical_bias="0.108"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/ImageButtonHamster"
        android:layout_width="127dp"
        android:layout_height="130dp"
        android:layout_marginStart="142dp"
        android:layout_marginEnd="142dp"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/hamster"
        android:src="@drawable/hamster_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImageButtonDog"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>